# jot-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: RELEASE_SETUP.md
.github/workflows/: ci.yml  release.yml
_bmad-output/implementation-artifacts/: 1-3-configure-code-quality-tools.md  1-4-implement-xdg-path-resolution.md  sprint-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
src/jot/: __init__.py  cli.py
src/jot/commands/: __init__.py  add.py  cancel.py  defer.py  deferred.py  done.py  resume.py  status.py
src/jot/config/: __init__.py  paths.py
src/jot/core/: __init__.py  exceptions.py  task.py  theme.py
src/jot/db/: __init__.py  connection.py  exceptions.py  migrations.py  repository.py  schema.sql
src/jot/ipc/: __init__.py  client.py  events.py  protocol.py  server.py
src/jot/monitor/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_cicd_pipeline.py  test_code_quality_tools.py  test_project_initialization.py  test_project_structure.py  test_xdg_path_resolution.py
tests/test_commands/: conftest.py  test_add.py  test_cancel.py  test_defer.py  test_deferred.py  test_deferred_workflow_e2e.py  test_done.py  test_help.py  test_monitor.py  test_resume.py  test_status.py
tests/test_config/: __init__.py  test_paths.py
tests/test_core/: test_exceptions.py  test_task.py  test_theme.py
tests/test_db/: conftest.py  helpers.py  test_connection.py  test_connection_edge_cases.py  test_crash_recovery.py  test_migrations.py  test_migrations_edge_cases.py  test_performance.py  test_repository.py  test_repository_edge_cases.py  test_schema.py
tests/test_ipc/: __init__.py  test_client.py  test_protocol.py  test_server.py
tests/test_monitor/: __init__.py  conftest.py  test_app.py  test_real_time_updates_e2e.py
