[tool.poetry]
name = "jot-cli"
version = "0.1.0"
description = "A terminal-based task execution tool"
authors = ["DJ"]
readme = "README.md"
packages = [{include = "jot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
typer = {version = "0.21.1", extras = ["all"]}
rich = "^14.3.1"
textual = "7.3.0"
pydantic = "2.12.5"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.19.1"
ruff = "^0.14.14"
black = "^26.1.0"

[tool.poetry.scripts]
jot = "jot.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
