[tool.poetry]
name = "jot-cli"
version = "0.1.0"
description = "A terminal-based task execution tool for focused work"
authors = ["DJ"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/djudge/jot-cli"
repository = "https://github.com/djudge/jot-cli"
keywords = ["cli", "productivity", "task-management", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [{include = "jot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
typer = {version = "0.21.1", extras = ["all"]}
rich = "^14.3.1"
textual = "7.3.0"
pydantic = "2.12.5"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.19.1"
ruff = "^0.14.14"
black = "^26.1.0"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
jot = "jot.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=jot",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise typer.Exit",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "jot.cli"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "jot.monitor.app"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
